--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-jose</artifactId>
+            <version>6.1.3</version>
+        </dependency>
+    </dependencies>
 	<build>
 		<plugins>
 			<plugin>
